# DerivativeCalculator

./: DerivativeCalculator.cabal
app/: Main.hs
src/: .#Bind.hs  Bind.hs  Derivate.hs  Expr.hs  Listvars.hs  Parser.hs  Simplify.hs
test/: Main.hs
