cabal-version:      2.4
name:               DerivativeCalculator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         grisha.baimetov@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable DerivativeCalculator
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:
                    Bind,
                    Derivate,
                    Expr,
                    Listvars,
                    Parser,
                    Simplify

    -- Modules included in this executable, other than Main.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    DerivativeCalculator,
                      base,
                      containers >= 0.6.5.1,
                      dlist >= 1.0,
                      mtl >= 2.2.2,
                      parsec,
                      parsec >= 3.1.14.0,
                      parsec3-numbers
    hs-source-dirs:   app,
                      src
    default-language: Haskell2010


library
  exposed-modules:
    Bind,
    Derivate,
    Expr,
    Listvars,
    Parser,
    Simplify
  hs-source-dirs:
    src
  build-depends:
                base,
                containers >= 0.6.5.1,
                dlist >= 1.0,
                mtl >= 2.2.2,
                parsec,
                parsec >= 3.1.14.0,
                parsec3-numbers
